ci/policy-tests/kyverno/baseline/disallow-capabilities/pod-disallowed-cap-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-cap-workload
  namespace: default
spec:
  restartPolicy: Always
  containers:
  - name: app
    image: ghcr.io/example/app:1.0.0
    securityContext:
      capabilities:
        add:
        - SYS_ADMIN
